Use-case for creating resulting log entries