@@ -21,16 +21,3 @@ allprojects {
 subprojects {
     apply(plugin = "java")
 }
-
-tasks.withType<JavaCompile> {
-    options.encoding = "UTF-8"
-    options.compilerArgs.add("--enable-preview")
-}
-
-tasks.withType<Test> {
-    jvmArgs?.add("--enable-preview")
-}
-
-tasks.withType<JavaExec> {
-    jvmArgs?.add("--enable-preview")
-}
